welcome.lessons.welcome.summative.Moria.scala.code
setDirection(EAST)
while (!estFaceMur()) {
  while (!estSurBiscuit()) {
    avance()
  }
  prendBiscuit()
  setDirection(WEST)
  while (!estSurBiscuit()) {
    avance()
  }
  recule()
  poseBiscuit()
  setDirection(EAST)
}
droite()
avance()
gauche()
avance()